<resources>
    <string name="app_name">HI</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>


    <string name="home_fragment_title">主页</string>
    <string name="mine_fragment_title">我的</string>
    <string name="login_activity_title">登录</string>
    <string name="my_collect_activity_title">我的收藏</string>
    <string name="my_vote_activity_title">我的投票</string>
    <string name="emailOrUsername">Email Or Username</string>
    <string name="password">Password</string>
    <string name="usernameOrPassword_empty">用户名或者密码不能为空</string>
    <string name="login_fail">login fail</string>

    <string name="login_in">登  录</string>
    <string name="my_votes">我的投票</string>
    <string name="my_collect">我的收藏</string>
    <string name="login_out">退出当前账号</string>
    <string name="like">点  赞</string>
    <string name="collect">收  藏</string>
    <string name="title_login_invalid">登录状态已失效</string>
    <string name="title_logout">用户未登录</string>
    <string name="title_authority_invalid">权限不足</string>
    <string name="error_user_create_vote_authority">您没有该权限创建投票！</string>
</resources>
