<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/actionBar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/actionbar_default"
            >
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_gravity="center"
                android:text="@string/login_activity_title"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/font_xl"
                />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_padding"
        android:background="@color/white">
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailOrUsername"
            android:maxLines="1"
            android:textSize="@dimen/font_l"
            android:background="@null"
            android:padding="@dimen/default_padding"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorInterval"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:maxLines="1"
            android:textSize="@dimen/font_l"
            android:inputType="textPassword"
            android:background="@null"
            android:padding="@dimen/default_padding"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorInterval"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_margin="@dimen/default_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_in"/>
</LinearLayout>